# pw-extensions

./: .gitignore  README.md  tsconfig.base.json
extensions/pw-monitor/src/: launch-hook.ts  monitor-sidecar.ts
extensions/pw-monitor/tests/: sidecar.test.ts
extensions/pw-user-action/: package.json
extensions/pw-user-action/src/: state.ts
extensions/pw-user-action/tests/: state.test.ts
extensions/pw-ws-server/: larry.json  package.json
extensions/pw-ws-server/protocols/: monitor.json
extensions/pw-ws-server/src/: utils.ts
extensions/pw-ws-server/tests/: source-adapter.test.ts
pw-monitor/: README.md  larry.json  package-lock.json  package.json
pw-monitor/assets/: dashboard.html
pw-monitor/src/: cdp-targets.ts  client.ts  close-hook.ts  gui-server.ts  launch-hook.ts  load-hook.ts  monitor-sidecar.ts  provider.ts  tab-store.ts  tab-sync.ts
pw-monitor/tests/: tab-sync.test.ts
pw-user-action/: README.md  larry.json  package-lock.json  package.json
pw-user-action/scripts/: build-native.mjs
pw-user-action/src/: action-user-action.ts  load-hook.ts  monitor-state.ts  monitor-ws-client.ts  native-dialog.ts  on-activated.ts  on-closed.ts  on-completed.ts  on-deactivated.ts  on-navigated.ts  on-started.ts  overlay.ts  state.ts
pw-user-action/tauri/: Cargo.toml
pw-user-action/tauri/src/: main.rs
pw-user-action/tests/: state.test.ts
pw-ws-server/: README.md  larry.json  package-lock.json  package.json
pw-ws-server/src/: protocol-loader.ts  provider-loader.ts  server.ts
pw-ws-server/tests/: protocol-loader.test.ts
(+9 files in other folders)
