[package]
name = "pw-user-action-wry"
version = "0.1.0"
edition = "2021"

[dependencies]
wry = "0.45"
tao = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[[bin]]
name = "pw-user-action-renderer"
path = "src/main.rs"
